# cppblueprint

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  COPYING  Makefile  README.md  buffer.cpp  buffer.h  cmake_install.cmake  main.cpp
..bin/: main
